--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
 	<meta charset="UTF-8">
     <title>Image Swap</title>
-	<link rel="stylesheet" href="Activity9.css" />
+	<link rel="stylesheet" href="Çoker-Activity9.css" />
 	<script src="jquery.js"></script>
-    <script src="Activity9.js"></script>
+    <script src="Çoker-Activity9.js"></script>
 </head>
 
 <body>
